--- a/src/components/Footer/styles.css
+++ b/src/components/Footer/styles.css
@@ -3,13 +3,15 @@
     margin: 2rem;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
 }
 
 .footer li {
-    margin-left: 4rem;
+    margin-left: 0rem;
     list-style: none;
+    color: wheat;
 }
+
 
 
 @media (max-width:768px){
